--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "path_to_submodule"]
-  path = tree/main/Srijan
+[submodule "vivo/Srijan/"]
+  path = vivo/Srijan/
   url = https://github.com/muzammilx07/vivo.git
