--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vivo/Srijan/"]
-  path = vivo/Srijan/
+[submodule "vivo/Srijan"]
+  path = vivo/Srijan
   url = https://github.com/muzammilx07/vivo.git
